Added mediapipe implementation of face landmarks detection
mediapipe offers exuberant face landmarks, and it also applied face tracking on consecutive frames rather than face detection everytime. This offers higher quality and lower complexity. Moreover, the api offered by google makes greate use of GPU acceleration.

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ sudub = "bash -c \"python3 __main__.py 2> /dev/null\""
 [packages]
 opencv-python = "*"
 dlib = "*"
+mediapipe = "*"
 
 [dev-packages]
 
