--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [scripts]
-sudub = "bash -c \"python3 __main__.py 2> /dev/null\""
+sudub = "bash -c \"export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python; python3 __main__.py 2> /dev/null\""
 
 [packages]
 opencv-python = "*"
